--- a/app/views/campers/index.erb
+++ b/app/views/campers/index.erb
@@ -1,4 +1,14 @@
 <h2>Here are All the Campers</h2>
 
-<%# Display a list all of the campers %>
 
+    <ul>
+
+    <% @campers.each do |camper| %>
+    <li>
+    
+     <%= link_to  camper.name, "/campers/#{camper.id}" %>
+
+    </li>
+    <%end%>
+    
+    </ul>
